# v2ray-to-clash

./: .gitignore  LICENSE  README.md  index.html  package.json  uno.config.ts  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clash_config.rs  engine.rs  error.rs  filter.rs  http_client.rs  ini_parser.rs  lib.rs  main.rs  node.rs  parser.rs
src/components/: ConfigPanel.vue  ResultPanel.vue
src/stores/: app.ts
src/types/: index.ts
src/utils/: format.ts
